--- a/09-06flextask/style.css
+++ b/09-06flextask/style.css
@@ -1,8 +1,8 @@
-
 .container{
     background-color: azure;
     position: sticky;
     height: 600px;
+    width: 100%;
     border: 4px solid rgb(180, 204, 207);
 }
 .labels{
@@ -14,6 +14,7 @@
 }
 .icons{  
     display: flex;
+    flex-wrap: wrap;
     background-color: rgb(40, 27, 27);
     justify-content: center;
     align-items: end;
@@ -29,9 +30,11 @@ i{
     padding: 15px;
     border-radius: 100%;
 }
-.center{
+.display{
     display: flex;
     align-items: center;
+    flex: 1 1 30px;
+    text-align: center;
 }
 #share{
     background-color: green;
@@ -53,6 +56,7 @@ h4{
     justify-content: center;
     align-items: start;
     padding: 0px;
+    
 
 }
 #start{
